copy over components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,13 @@
 ---
 import RootLayout from "@/layouts/root-layout.astro";
 import AppLayout from "@/layouts/app-layout.astro";
-import Adder from "@/components/adder.tsx";
-import TodoList from "@/components/todo-list.tsx";
 ---
 
 <RootLayout>
   <AppLayout>
     <main class="container2 flex flex-col items-center gap-4 pt-6">
       <article class="flex w-full flex-col gap-4">
-        <Adder client:load />
-        <TodoList client:load />
+        hello
       </article>
     </main>
   </AppLayout>
