--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -2,37 +2,10 @@
 import { cn } from "@/lib/utils";
 import { CircleCheckBig } from "lucide-react";
 import { buttonVariants } from "@/components/ui/button";
-import type { Todo } from "@/api/db/schema";
-import TodoItemSample from "@/components/todo-sample";
 import { GitHubLogoIcon } from "@radix-ui/react-icons";
 import RootLayout from "@/layouts/root-layout.astro";
 
-const sampleTodos: Todo[] = [
-  {
-    id: "1",
-    text: "Buy groceries",
-    isCompleted: false,
-    isDeleted: false,
-    createdAt: new Date().toISOString(),
-    userId: "1",
-  },
-  {
-    id: "2",
-    text: "Find the meaning of life",
-    isCompleted: false,
-    isDeleted: false,
-    createdAt: new Date().toISOString(),
-    userId: "1",
-  },
-  {
-    id: "3",
-    text: "Learn Astro web framework",
-    isCompleted: true,
-    isDeleted: false,
-    createdAt: new Date().toISOString(),
-    userId: "1",
-  },
-];
+
 ---
 
 <RootLayout>
@@ -51,7 +24,7 @@ const sampleTodos: Todo[] = [
       Login with GitHub
     </a>
     <div class="flex w-full flex-col gap-2">
-      {sampleTodos.map((todo) => <TodoItemSample todo={todo} />)}
+      Examples
     </div>
   </main>
 </RootLayout>
