--- a/src/globals.css
+++ b/src/globals.css
@@ -7,14 +7,14 @@
     --background: 0 0% 100%;
     --foreground: 0 0% 5%;
 
-    --card: 0 0% 99.5%;
+    --card: 0 0% 99%;
     --card-foreground: 0 0% 5%;
 
     --popover: 0 0% 99%;
     --popover-foreground: 0 0% 5%;
 
-    --primary: 178 77% 48%;
-    --primary-foreground: 0 0% 2%;
+    --primary: 175 84% 32%;
+    --primary-foreground: 0 0% 98%;
 
     --secondary: 0 0% 95%;
     --secondary-foreground: 0 0% 5%;
@@ -41,36 +41,36 @@
        URL: https://gradient.page */
 
     /* CSS: .bg-gradient { background: var(--gradient) } */
-    --gradient: linear-gradient(to top left, #89f7fe, #66a6ff);
+    --gradient: #5eead4;
 
-    --background: 195 63.699999999999996% 6.08%;
-    --foreground: 195 9.8% 98.8%;
+    --background: 181 50.050000000000004% 5.12%;
+    --foreground: 181 7.7% 98.2%;
 
-    --muted: 195 49% 22.8%;
-    --muted-foreground: 195 9.8% 57.6%;
+    --muted: 181 35.42% 19.84%;
+    --muted-foreground: 181 7.7% 56.4%;
 
-    --popover: 195 45.4% 9.88%;
-    --popover-foreground: 195 9.8% 98.8%;
+    --popover: 181 44.980000000000004% 8.32%;
+    --popover-foreground: 181 7.7% 98.2%;
 
-    --card: 195 45.4% 9.88%;
-    --card-foreground: 195 9.8% 98.8%;
+    --card: 181 44.980000000000004% 8.32%;
+    --card-foreground: 181 7.7% 98.2%;
 
-    --border: 195 49% 22.8%;
-    --input: 195 49% 22.8%;
+    --border: 181 35.42% 19.84%;
+    --input: 181 35.42% 19.84%;
 
-    --primary: 195 98% 76%;
-    --primary-foreground: 195 9.8% 7.6%;
+    --primary: 181 77% 64%;
+    --primary-foreground: 181 7.7% 6.4%;
 
-    --secondary: 195 49% 22.8%;
-    --secondary-foreground: 195 9.8% 98.8%;
+    --secondary: 181 35.42% 19.84%;
+    --secondary-foreground: 181 7.7% 98.2%;
 
-    --accent: 195 49% 22.8%;
-    --accent-foreground: 195 9.8% 98.8%;
+    --accent: 181 35.42% 19.84%;
+    --accent-foreground: 181 7.7% 98.2%;
 
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 195 9.8% 98.8%;
+    --destructive-foreground: 181 7.7% 98.2%;
 
-    --ring: 195 98% 76%;
+    --ring: 181 77% 64%;
   }
 }
 
