--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -1,30 +1,26 @@
 ---
 import { cn } from "@/lib/utils";
-import { CircleCheckBig } from "lucide-react";
+import { Feather } from "lucide-react";
 import { buttonVariants } from "@/components/ui/button";
 import { GitHubLogoIcon } from "@radix-ui/react-icons";
 import RootLayout from "@/layouts/root-layout.astro";
-
-
 ---
 
 <RootLayout>
   <main class="container2 flex min-h-[100svh] flex-col gap-6 pt-[10vh]">
     <div class="flex items-center justify-center">
-      <CircleCheckBig size="5rem" className="text-primary" />
+      <Feather size="5rem" className="text-primary" />
     </div>
     <section
       class="prose w-full max-w-none text-center dark:prose-invert prose-h1:mb-2 prose-h1:text-5xl"
     >
-      <h1 class="">Todos</h1>
-      <p class="">A robust and feature-poor todo app</p>
+      <h1 class="">PackLighter</h1>
+      <p class="">The packing list tool of champions</p>
     </section>
     <a class={cn(buttonVariants(), "w-full")} href="/api/auth/login/github">
       <GitHubLogoIcon className="mr-2 h-5 w-5" />
       Login with GitHub
     </a>
-    <div class="flex w-full flex-col gap-2">
-      Examples
-    </div>
+    <div class="flex w-full flex-col gap-2">Examples</div>
   </main>
 </RootLayout>
