--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,19 @@
 ---
 import RootLayout from "@/layouts/root-layout.astro";
 import AppLayout from "@/layouts/app-layout.astro";
+import { HomeIcon } from "lucide-react";
 ---
 
 <RootLayout>
   <AppLayout>
-    <main class="container2 flex flex-col items-center gap-4 pt-6">
-      <article class="flex w-full flex-col gap-4">
-        hello
-      </article>
-    </main>
+    <div class="flex justify-center items-center h-full">
+      <div class="flex flex-col gap-2 items-center max-h-[50vh] h-full">
+        <HomeIcon size="4rem" className="text-primary" />
+        <h2 class="text-2xl font-bold">Welcome to Packlighter</h2>
+        <p class="text-muted-foreground text-sm">
+          Select a list to get packing
+        </p>
+      </div>
+    </div>
   </AppLayout>
 </RootLayout>
