add view transitions

--- a/src/layouts/root-layout.astro
+++ b/src/layouts/root-layout.astro
@@ -3,6 +3,7 @@ import "@/globals.css";
 import { ThemeListener } from "@/lib/theme/theme-listener.tsx";
 import { cn } from "@/lib/utils.ts";
 import "@fontsource-variable/inter";
+import { ViewTransitions } from "astro:transitions";
 
 const theme = Astro.cookies.get("theme")?.value;
 ---
@@ -16,6 +17,7 @@ const theme = Astro.cookies.get("theme")?.value;
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <title>Todos</title>
+    <ViewTransitions />
   </head>
   <body class="min-h-[100svh] flex flex-col">
     <ThemeListener client:load />
