--- a/src/globals.css
+++ b/src/globals.css
@@ -84,6 +84,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-size: 16px;
   }
   .container2 {
     @apply mx-auto w-full max-w-md px-4 lg:max-w-xl;
