--- a/src/pages/[...path].astro
+++ b/src/pages/[...path].astro
@@ -1,8 +1,9 @@
 ---
-import { ThemeListener } from "@/lib/theme/theme-listener.tsx";
-import { cn } from "@/lib/utils.ts";
+import { ThemeListener } from "@/app/lib/theme/theme-listener";
+import { cn } from "@/app/lib/utils.ts";
 import "@fontsource-variable/inter";
 import "@/globals.css";
+import App from "@/app/main";
 
 const theme = Astro.cookies.get("theme")?.value;
 ---
@@ -19,6 +20,6 @@ const theme = Astro.cookies.get("theme")?.value;
   </head>
   <body class="min-h-[100svh] flex flex-col">
     <ThemeListener client:load />
-    <slot />
+    <App client:load />
   </body>
 </html>
