--- a/src/pages/[...path].astro
+++ b/src/pages/[...path].astro
@@ -12,8 +12,12 @@ const theme = Astro.cookies.get("theme")?.value;
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <title>PackLighter</title>
