--- a/src/globals.css
+++ b/src/globals.css
@@ -4,6 +4,7 @@
 
 @layer base {
   :root {
+    color-scheme: light;
     --background: 0 0% 100%;
     --foreground: 0 0% 5%;
 
@@ -36,6 +37,7 @@
   }
 
   .dark {
+    color-scheme: dark;
     --background: 120 3% 6%;
     --foreground: 0 0% 98%;
 
