add hook for getting current list

--- a/src/pages/[...path].astro
+++ b/src/pages/[...path].astro
@@ -11,7 +11,7 @@ const theme = Astro.cookies.get("theme")?.value;
 <html lang="en" class={cn(theme === "dark" && "dark")}>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="feather.svg" />
     <meta name="generator" content={Astro.generator} />
     <meta
       name="viewport"
