--- a/src/globals.css
+++ b/src/globals.css
@@ -64,7 +64,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground h-screen overflow-hidden;
   }
   .container2 {
     @apply mx-auto w-full max-w-md px-4 lg:max-w-xl;
