--- a/src/globals.css
+++ b/src/globals.css
@@ -82,7 +82,12 @@
 @layer utilities {
   .prose2 {
     @apply prose prose-sm max-w-none dark:prose-invert;
-    @apply prose-h1:m-0 prose-h1:mb-2 prose-h2:m-0 prose-h2:text-lg prose-h3:m-0 prose-h3:text-base prose-h4:m-0;
+    @apply prose-h1:mb-2 prose-h1:mt-0 prose-h1:text-lg;
+    @apply prose-h2:m-0 prose-h2:text-base prose-h2:font-semibold;
+    @apply prose-h3:m-0 prose-h3:text-sm prose-h3:font-semibold;
+    @apply prose-h4:m-0;
+    @apply prose-p:mt-0;
+    @apply prose-hr:my-4;
   }
   .container2 {
     @apply mx-auto w-full max-w-2xl px-4 lg:max-w-5xl;
