--- a/src/pages/v/[listId].astro
+++ b/src/pages/v/[listId].astro
@@ -25,7 +25,7 @@ if (!listOwner) {
 <RootLayout>
   <main class="overflow-auto h-full">
     <div class="container2 py-8 pb-20">
-      <ViewerList list={list} />
+      <ViewerList client:load list={list} />
     </div>
   </main>
 </RootLayout>
