--- a/src/pages/v/[listId].astro
+++ b/src/pages/v/[listId].astro
@@ -3,6 +3,7 @@ import RootLayout from "@/layouts/root-layout.astro";
 import { getExpandedList, getUser } from "@/lib/helpers";
 
 import ViewerList from "@/components/list-viewer/viewer-list";
+import OwnerBadge from "@/components/owner-badge";
 
 const { listId = "" } = Astro.params;
 const list = await getExpandedList(listId);
@@ -24,7 +25,10 @@ if (!listOwner) {
 
 <RootLayout>
   <main class="overflow-auto h-full">
-    <div class="container2 py-8 pb-20">
+    <div class="container2 py-8 pb-20 grid gap-4">
+      <header>
+        <OwnerBadge client:load owner={listOwner} />
+      </header>
       <ViewerList client:load list={list} />
     </div>
   </main>
