--- a/src/pages/v/[listId].astro
+++ b/src/pages/v/[listId].astro
@@ -4,6 +4,9 @@ import { getExpandedList, getUser } from "@/lib/helpers";
 
 import ViewerList from "@/components/list-viewer/viewer-list";
 import OwnerBadge from "@/components/owner-badge";
+import { cn } from "@/lib/utils";
+import { buttonVariants } from "@/components/ui/button";
+import { Pencil } from "lucide-react";
 
 const { listId = "" } = Astro.params;
 const list = await getExpandedList(listId);
@@ -17,6 +20,7 @@ if (!list.isPublic) {
 }
 
 const listOwner = await getUser(list.userId);
+const isListOwner = Astro.locals.user?.id === list.userId;
 
 if (!listOwner) {
   return new Response("List owner not found", { status: 404 });
@@ -26,8 +30,19 @@ if (!listOwner) {
 <RootLayout>
   <main class="overflow-auto h-full">
     <div class="container2 py-8 pb-20 grid gap-4">
-      <header>
+      <header class="flex justify-between gap-4 items-center">
         <OwnerBadge client:load owner={listOwner} />
+        {
+          isListOwner && (
+            <a
+              href={`/list/${listId}`}
+              class={cn(buttonVariants({ size: "sm" }), "h-6")}
+            >
+              <Pencil className="size-3 mr-2" />
+              <span>Edit List</span>
+            </a>
+          )
+        }
       </header>
       <ViewerList client:load list={list} />
     </div>
