rename to lighter travel

--- a/src/layouts/root-layout.astro
+++ b/src/layouts/root-layout.astro
@@ -19,7 +19,7 @@ const theme = Astro.cookies.get("theme")?.value;
 
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <title>TrekReady</title>
+    <title>LighterTravel</title>
   </head>
   <body class="min-h-[100svh] flex flex-col">
     <ThemeListener client:load />
