--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -14,7 +14,7 @@ import { Earth } from "lucide-react";
     <section
       class="prose w-full max-w-none text-center dark:prose-invert prose-h1:mb-2 prose-h1:text-5xl"
     >
-      <h1 class="">TrekReady</h1>
+      <h1 class="">LighterTravel</h1>
       <p class="">The packing tool of travel champions</p>
     </section>
     <section class="flex flex-col gap-2">
