--- a/src/pages/[...path].astro
+++ b/src/pages/[...path].astro
@@ -3,6 +3,6 @@ import App from "@/app/main";
 import RootLayout from "@/layouts/root-layout.astro";
 ---
 
-<RootLayout>
+<RootLayout noOverscoll>
   <App client:only="react" />
 </RootLayout>
