--- a/src/layouts/markdown-layout.astro
+++ b/src/layouts/markdown-layout.astro
@@ -6,7 +6,9 @@ import RootLayout from "./root-layout.astro";
 <RootLayout>
   <main class="container2 py-8 grid gap-10">
     <Logo />
-    <div class="prose prose-sm dark:prose-invert max-w-none">
+    <div
+      class="prose prose-sm dark:prose-invert max-w-none prose-h2:before:content-['#_'] prose-h2:before:text-primary"
+    >
       <slot />
     </div>
   </main>
