--- a/src/pages/policies/index.astro
+++ b/src/pages/policies/index.astro
@@ -1,9 +1,62 @@
 ---
+import Logo from "@/components/logo";
+import { Card } from "@/components/ui/card";
 import RootLayout from "@/layouts/root-layout.astro";
+import { cn } from "@/lib/utils";
+import { Handshake, Lock, Cookie, Euro, type LucideIcon } from "lucide-react";
+
+type Policy = {
+  name: string;
+  path: string;
+  icon: LucideIcon;
+  iconColor: string;
+};
+
+const policies: Policy[] = [
+  {
+    name: "Terms of Service (ToS)",
+    path: "/policies/terms-of-service",
+    icon: Handshake,
+    iconColor: "text-orange-500",
+  },
+  {
+    name: "Privacy Policy",
+    path: "/policies/privacy",
+    icon: Lock,
+    iconColor: "text-green-500",
+  },
+  {
+    name: "Cookie Policy",
+    path: "/policies/cookies",
+    icon: Cookie,
+    iconColor: "text-yellow-500",
+  },
+  {
+    name: "GDPR Compliance (for EU users)",
+    path: "/policies/gdpr",
+    icon: Euro,
+    iconColor: "text-blue-500",
+  },
+];
 ---
 
 <RootLayout>
-  # Policies - [Terms of Service (ToS)](/policies/terms-of-service) - [Privacy
-  Policy](/policies/privacy) - [Cookie Policy](/policies/cookies) - [GDPR
-  Compliance (for EU users)](/policies/gdpr)
+  <main class="container2 py-8 grid gap-10">
+    <Logo />
+    <div class="prose dark:prose-invert prose-sm">
+      <h1>Policies</h1>
+    </div>
+    <div class="grid sm:grid-cols-2 gap-4">
+      {
+        policies.map((policy) => (
+          <a href={policy.path} class="text-primary">
+            <Card className="min-h-40 p-6 flex flex-col gap-4 items-center justify-center hover:bg-muted/30 transition-colors ease-in">
+              <div class="text-xl font-bold tracking-tight text-center">{policy.name}</div>
+              <policy.icon className={cn("size-12", policy.iconColor)} />
+            </Card>
+          </a>
+        ))
+      }
+    </div>
+  </main>
 </RootLayout>
