--- a/src/layouts/root-layout.astro
+++ b/src/layouts/root-layout.astro
@@ -26,6 +26,10 @@ const { noOverscoll } = Astro.props;
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <title>LighterTravel</title>
+
+    <link href="/icons/css/fontawesome.css" rel="stylesheet" />
+    <link href="/icons/css/brands.css" rel="stylesheet" />
+    <link href="/icons/css/solid.css" rel="stylesheet" />
   </head>
   <body
     class={cn("min-h-[100svh] flex flex-col", noOverscoll && "overscroll-none")}
