--- a/src/pages/policies/index.astro
+++ b/src/pages/policies/index.astro
@@ -3,39 +3,33 @@ import Logo from "@/components/logo";
 import { Card } from "@/components/ui/card";
 import RootLayout from "@/layouts/root-layout.astro";
 import { cn } from "@/lib/utils";
-import { Handshake, Lock, Cookie, Euro, type LucideIcon } from "lucide-react";
 
 type Policy = {
   name: string;
   path: string;
-  icon: LucideIcon;
-  iconColor: string;
+  icon: string;
 };
 
 const policies: Policy[] = [
   {
     name: "Terms of Service (ToS)",
     path: "/policies/terms-of-service",
-    icon: Handshake,
-    iconColor: "text-orange-500",
+    icon: "fa-solid fa-handshake text-orange-500",
   },
   {
     name: "Privacy Policy",
     path: "/policies/privacy",
-    icon: Lock,
-    iconColor: "text-green-500",
+    icon: "fa-solid fa-lock text-green-500",
   },
   {
     name: "Cookie Policy",
     path: "/policies/cookies",
-    icon: Cookie,
-    iconColor: "text-yellow-500",
+    icon: "fa-solid fa-cookie-bite text-yellow-500",
   },
   {
     name: "GDPR Compliance (for EU users)",
     path: "/policies/gdpr",
-    icon: Euro,
-    iconColor: "text-blue-500",
+    icon: "fa-solid fa-euro-sign text-blue-500",
   },
 ];
 ---
@@ -50,9 +44,11 @@ const policies: Policy[] = [
       {
         policies.map((policy) => (
           <a href={policy.path} class="text-primary">
-            <Card className="min-h-40 p-6 flex flex-col gap-4 items-center justify-center hover:bg-muted/30 transition-colors ease-in">
-              <div class="text-xl font-bold tracking-tight text-center">{policy.name}</div>
-              <policy.icon className={cn("size-12", policy.iconColor)} />
+            <Card className="min-h-[10rem] p-6 flex flex-col gap-5 items-center justify-center hover:bg-muted/30 transition-colors ease-in">
+              <div class="text-xl font-bold tracking-tight text-center">
+                {policy.name}
+              </div>
+              <i class={cn(policy.icon, "text-[3rem]")} />
             </Card>
           </a>
         ))
