--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -1,7 +1,6 @@
 ---
 import LoginButton from "@/components/login-button";
 import RootLayout from "@/layouts/root-layout.astro";
-import { Earth } from "lucide-react";
 ---
 
 <RootLayout>
@@ -9,7 +8,7 @@ import { Earth } from "lucide-react";
     class="mx-auto flex min-h-[100svh] w-full max-w-lg flex-col gap-6 px-4 pt-[10vh]"
   >
     <div class="flex items-center justify-center">
-      <Earth size="5rem" className="text-primary" />
+      <i class="text-primary fa-solid fa-earth text-[5rem]"></i>
     </div>
     <section
       class="prose w-full max-w-none text-center dark:prose-invert prose-h1:mb-2 prose-h1:text-5xl"
