remove hashes before h2s

--- a/src/layouts/markdown-layout.astro
+++ b/src/layouts/markdown-layout.astro
@@ -7,7 +7,7 @@ import RootLayout from "./root-layout.astro";
   <main class="container2 py-8 grid gap-10">
     <Logo />
     <div
-      class="prose prose-sm dark:prose-invert max-w-none prose-h2:before:content-['#_'] prose-h2:before:text-primary"
+      class="prose prose-sm dark:prose-invert max-w-none"
     >
       <slot />
     </div>
