fix theme listener and change font

--- a/src/layouts/root-layout.astro
+++ b/src/layouts/root-layout.astro
@@ -1,8 +1,11 @@
 ---
 import { ThemeListener } from "@/lib/theme/theme-listener";
 import { cn } from "@/lib/utils";
-import "@fontsource-variable/inter";
 import "@/globals.css";
+
+import "@fontsource-variable/inter";
+import '@fontsource-variable/reddit-sans';
+import '@fontsource-variable/radio-canada';
 
 const theme = Astro.cookies.get("theme")?.value;
 
