update astro and move weight units to types file

--- a/src/layouts/root-layout.astro
+++ b/src/layouts/root-layout.astro
@@ -4,8 +4,8 @@ import { cn } from "@/lib/utils";
 import "@/globals.css";
 
 import "@fontsource-variable/inter";
-import '@fontsource-variable/reddit-sans';
-import '@fontsource-variable/radio-canada';
+import "@fontsource-variable/reddit-sans";
+import "@fontsource-variable/radio-canada";
 
 const theme = Astro.cookies.get("theme")?.value;
 
@@ -19,14 +19,14 @@ const { noOverscoll } = Astro.props;
 <html lang="en" class={cn(theme === "dark" && "dark")}>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="earth.svg" />
     <meta name="generator" content={Astro.generator} />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
 
-    <link rel="manifest" href="manifest.json" />
+    <link rel="icon" href="/earth.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <title>LighterTravel</title>
 
