--- a/src/globals.css
+++ b/src/globals.css
@@ -35,6 +35,15 @@
     --ring: 160 36% 72%;
 
     --radius: 0.6rem;
+
+    --sidebar-background: 180 10% 95%;
+    /* --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-primary-foreground: 0 0% 98%;
+    --sidebar-accent: 240 4.8% 95.9%;
+    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-border: 220 13% 91%;
+    --sidebar-ring: 217.2 91.2% 59.8%; */
   }
 
   .dark {
@@ -67,6 +76,15 @@
     --border: 156 8% 15%;
     --input: 158 9% 18%;
     --ring: 160 84% 40%;
+
+    --sidebar-background: 160 10% 6%;
+    /* --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-primary: 224.3 76.3% 48%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-ring: 217.2 91.2% 59.8%; */
   }
 }
 
