install radix and get theme working

--- a/src/layouts/root-layout.astro
+++ b/src/layouts/root-layout.astro
@@ -1,6 +1,8 @@
 ---
 import { ThemeListener } from "@/lib/theme/theme-listener";
 import { cn } from "@/lib/utils";
+
+import "@radix-ui/themes/styles.css";
 import "@/globals.css";
 
 import "@fontsource-variable/inter";
