--- a/src/globals.css
+++ b/src/globals.css
@@ -1,100 +1,24 @@
-@tailwind base;
+@import "tailwindcss/base";
+@import "@radix-ui/themes/styles.css";
+
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  :root {
-    color-scheme: light;
-
-    --background: 180 8% 96%;
-    --foreground: 150 8% 5%;
-
-    --card: 160 10% 95%;
-    --card-foreground: 150 8% 5%;
-
-    --popover: 160 10% 94%;
-    --popover-foreground: 150 8% 5%;
-
-    --primary: 160 84% 39%;
-    --primary-foreground: 120 9% 2%;
-
-    --secondary: 160 12% 91%;
-    --secondary-foreground: 150 8% 5%;
-
-    --muted: 165 8% 91%;
-    --muted-foreground: 160 9% 45%;
-
-    --accent: 165 8% 91%;
-    --accent-foreground: 150 8% 5%;
-
-    --destructive: 0 84% 60%;
-    --destructive-foreground: 0 0% 98%;
-
-    --border: 160 9% 87%;
-    --input: 160 9% 80%;
-    --ring: 160 36% 72%;
-
-    --radius: 0.6rem;
-
-    --sidebar-background: 180 10% 95%;
-    /* --sidebar-foreground: 240 5.3% 26.1%;
-    --sidebar-primary: 240 5.9% 10%;
-    --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 240 4.8% 95.9%;
-    --sidebar-accent-foreground: 240 5.9% 10%;
-    --sidebar-border: 220 13% 91%;
-    --sidebar-ring: 217.2 91.2% 59.8%; */
-  }
-
-  .dark {
-    color-scheme: dark;
-
-    --background: 160 7% 8%;
-    --foreground: 180 9% 98%;
-
-    --card: 160 6% 10%;
-    --card-foreground: 180 9% 98%;
-
-    --popover: 160 6% 10%;
-    --popover-foreground: 180 9% 98%;
-
-    --primary: 160 84% 39%;
-    --primary-foreground: 120 9% 2%;
-
-    --secondary: 157 8% 19%;
-    --secondary-foreground: 180 9% 98%;
-
-    --muted: 158 7% 29%;
-    --muted-foreground: 159 8% 49%;
-
-    --accent: 160 71% 19%;
-    --accent-foreground: 180 9% 98%;
-
-    --destructive: 0 84% 60%;
-    --destructive-foreground: 0 0% 98%;
-
-    --border: 156 8% 15%;
-    --input: 158 9% 18%;
-    --ring: 160 84% 40%;
-
-    --sidebar-background: 160 10% 6%;
-    /* --sidebar-foreground: 240 4.8% 95.9%;
-    --sidebar-primary: 224.3 76.3% 48%;
-    --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 240 3.7% 15.9%;
-    --sidebar-accent-foreground: 240 4.8% 95.9%;
-    --sidebar-border: 240 3.7% 15.9%;
-    --sidebar-ring: 217.2 91.2% 59.8%; */
-  }
+* {
+  @apply border-gray-7;
 }
 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+.radix-themes {
+  --default-font-family: "Radio Canada Variable", sans-serif;
+  --cursor-button: pointer;
+  --cursor-checkbox: pointer;
+  --cursor-disabled: default;
+  --cursor-link: pointer;
+  --cursor-menu-item: pointer;
+  --cursor-radio: pointer;
+  --cursor-slider-thumb: grab;
+  --cursor-slider-thumb-active: grabbing;
+  --cursor-switch: pointer;
 }
 
 @layer utilities {
