--- a/src/pages/policies/[...slug].astro
+++ b/src/pages/policies/[...slug].astro
@@ -1,4 +1,5 @@
 ---
+import RadixProvider from "@/components/base/radix-provider";
 import MarkdownLayout from "@/layouts/markdown-layout.astro";
 import { cn } from "@/lib/utils";
 import { getEntry } from "astro:content";
@@ -18,9 +19,11 @@ const { Content } = await entry.render();
 ---
 
 <MarkdownLayout>
-  <h1>
-    <i class={cn(entry.data.icon,"mr-2")}></i>
-    <span>{entry.data.title}</span>
-  </h1>
-  <Content />
+  <RadixProvider>
+    <h1>
+      <i class={cn(entry.data.icon, "mr-2")}></i>
+      <span>{entry.data.title}</span>
+    </h1>
+    <Content />
+  </RadixProvider>
 </MarkdownLayout>
